--- a/Frontend/processum-frontend/src/app/features/process/components/button-action-grid/button-action-grid.html
+++ b/Frontend/processum-frontend/src/app/features/process/components/button-action-grid/button-action-grid.html
@@ -1,4 +1,4 @@
-<div class="actions flex gap-2 justify-center items-center h-full">
+<!-- <div class="actions flex gap-2 justify-center items-center h-full">
   <button
     *ngFor="let action of actions"
     class="p-1.5 rounded-[10px] font-medium"
@@ -10,4 +10,16 @@
 
     <i-lucide [name]="action.icon" size="20"></i-lucide>
   </button>
-</div>
+</div> -->
+
+<ng-container *ngIf="useDropdown">
+  <div class="flex justify-center items-center h-full">
+    <button
+      tabindex="0"
+      class="hover:bg-primary-100 p-2 rounded-[5px]"
+      (click)="showPopup($event)"
+      #buttonElement>
+      <i-lucide [img]="Ellipsis" size="18" class="hover:bg-none"></i-lucide>
+    </button>
+  </div>
+</ng-container>
