--- a/Frontend/processum-frontend/src/app/layouts/main/main.html
+++ b/Frontend/processum-frontend/src/app/layouts/main/main.html
@@ -9,20 +9,23 @@
   </aside>
 
   <!-- CONTEÚDO -->
-  <section class="flex-1 flex flex-col">
+  <section class="flex-1 flex flex-col min-h-screen">
     <!-- NAVBAR -->
-    <div class="drawer-content w-full flex justify-center">
+    <div class="w-full">
       <app-navbar></app-navbar>
     </div>
 
-    <!-- CONTENT -->
-    <div class="flex-1 flex justify-center items-center">
-      <!-- <app-content></app-content> -->
-       <router-outlet></router-outlet>
+    <!-- CONTEÚDO + FOOTER -->
+    <div class="flex-1 flex flex-col">
+      <!-- PAGE CONTENT -->
+      <div class="flex flex-1 overflow-auto justify-center">
+        <router-outlet></router-outlet>
+      </div>
+
+      <!-- FOOTER -->
+      <footer class="h-10 flex items-center justify-center bg-white text-black">
+        <p>Rafael Almeida - 2026 ©</p>
+      </footer>
     </div>
   </section>
 </main>
-
-<footer class="w-full h-6 flex items-center justify-center bg-white text-black">
-  <p>Rafael Almeida - 2026 ©</p>
-</footer>
