--- a/Frontend/processum-frontend/src/app/layouts/navbar/navbar.html
+++ b/Frontend/processum-frontend/src/app/layouts/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar w-3xl bg-white flex items-center justify-between relative">
+<nav class="navbar bg-white">
     <div
       class="lg:hidden cursor-pointer"
       (click)="layoutService.toggleSidebar()"
@@ -9,20 +9,21 @@
         class="size-6 text-shadow-primary-400"
       ></i-lucide>
     </div>
-  <div class="px-4 text-black font-medium text-2xl">OCTAPRO</div>
-  <label class="input px-4">
-    <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-      <g
-        stroke-linejoin="round"
-        stroke-linecap="round"
-        stroke-width="2.5"
-        fill="none"
-        stroke="currentColor"
-      >
-        <circle cx="11" cy="11" r="8"></circle>
-        <path d="m21 21-4.3-4.3"></path>
-      </g>
-    </svg>
-    <input type="search" required placeholder="Pesquisar" />
-  </label>
+  <div class="w-full flex justify-center">
+    <label class="input px-4">
+      <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <g
+          stroke-linejoin="round"
+          stroke-linecap="round"
+          stroke-width="2.5"
+          fill="none"
+          stroke="currentColor"
+        >
+          <circle cx="11" cy="11" r="8"></circle>
+          <path d="m21 21-4.3-4.3"></path>
+        </g>
+      </svg>
+      <input type="search" required placeholder="Pesquisar" />
+    </label>
+  </div>
 </nav>
