--- a/Frontend/processum-frontend/src/app/features/process/components/new-process-button/new-process-button.html
+++ b/Frontend/processum-frontend/src/app/features/process/components/new-process-button/new-process-button.html
@@ -1,5 +1,5 @@
 <button
-  class="mb-4 px-4 py-2 bg-primary-600 text-white rounded hover:bg-primary-400 transition-colors"
+  class="mb-4 px-4 py-2 bg-primary-600 text-white rounded"
   (click)="onNewProcess()">
   Novo Processo
 </button>
