--- a/Frontend/processum-frontend/src/app/features/process/view/process/process.html
+++ b/Frontend/processum-frontend/src/app/features/process/view/process/process.html
@@ -1,4 +1,4 @@
-<div class="">
+<div>
   <h1 class="text-3xl font-bold mb-2.5">Processos Judiciais</h1>
 
   <div class="p-4 h-[160px] w-[1600px] mb-3 rounded-[10px] shadow-container bg-white text-black flex flex-col">
