--- a/Frontend/processum-frontend/src/app/shared/components/filter-inputs/filter-inputs.html
+++ b/Frontend/processum-frontend/src/app/shared/components/filter-inputs/filter-inputs.html
@@ -6,12 +6,12 @@
 <!-- NNNNNNN-DD.AAAA.J.TR.OOOO -->
     <div class="flex gap-4">
       <p-floatlabel variant="on">
-        <p-inputmask id="input_process" [(ngModel)]="value3" mask="9999999-99.9999.9.99.9999" />
+        <p-inputmask id="input_process" mask="9999999-99.9999.9.99.9999" />
         <label for="input_process">N Processo</label>
       </p-floatlabel>
 
       <p-floatlabel variant="on">
-        <input pInputText id="input_client" [(ngModel)]="value3" autocomplete="off" />
+        <input pInputText id="input_client"autocomplete="off" />
         <label for="input_client">Cliente</label>
       </p-floatlabel>
 
@@ -22,7 +22,7 @@
       </p-floatlabel>
 
       <p-floatlabel variant="on">
-        <p-datepicker id="datepicker_date_open" [(ngModel)]="value3" inputId="on_label" showIcon iconDisplay="input" dateFormat="dd/mm/yy"/>
+        <p-datepicker id="datepicker_date_open" inputId="on_label" showIcon iconDisplay="input" dateFormat="dd/mm/yy"/>
         <label for="datepicker_date_open">Data de Abertura</label>
       </p-floatlabel>
 
